deployment/musicapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicapi
  namespace: ns-musicapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musicapi
  template:
    metadata:
      labels:
        app: musicapi
    spec:
      containers:
      - name:  musicapi
        image: farrasyakila/music-app-1
        resources:
          limits:
            cpu: "0.4"
            memory: 500Mi
          requests:
            cpu: "0.1"
            memory: 150Mi
        ports:
        - containerPort: 8081
