deployment/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-api
  namespace: ns-musicapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-api
  template:
    metadata:
      labels:
        app: mysql-api
    spec:
      containers:
      - name:  mysql-api
        image: mysql:8.0
        env : 
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
              secretKeyRef:
                key: rootpassword
                name: mysql-password
        - name: MYSQL_DATABASE
          value: "evergreen_music_db" 
        resources:
          limits:
            cpu: "0.4" 
            memory: 500Mi 
          requests:
            cpu: "0.1" 
            memory: 150Mi 
        ports:
        - containerPort: 3306
        volumeMounts: 
        - name: mysql-api
          mountPath: /data
      volumes:
      - name: mysql-api
        persistentVolumeClaim:
          claimName: mysql-api
