deployment/musicapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicapi
  namespace: ns-musicapi
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: musicapi
