deployment/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-api
  namespace: ns-musicapi
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql-api
