deployment/musicapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: musicapi
  namespace: ns-musicapi
spec:
  ingressClassName: nginx
  rules:
  - host: api.farrasyakila.xyz
    http:
      paths:
      - backend:
          service:
            name: musicapi
            port:
              number: 8081
        path: /
        pathType: Prefix
